# miniserde

./: Cargo.toml
mini-bench/: Cargo.toml  gen.py
mini-bench/src/: main.rs
