[package]
name = "mini-bench"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mini = ["miniserde"]
full = ["serde", "serde_derive", "serde_json"]

[dependencies]
miniserde = { version = "0.1.11", path = "..", optional = true }
serde = { version = "1.0.99", optional = true }
serde_derive = { version = "1.0.99", optional = true }
serde_json = { version = "1.0.40", optional = true }
